force-app/main/default/objects/Settings__c/Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>inwise Setting</label>
</CustomObject>