force-app/main/default/objects/Settings__c/fields/Activate_Advanced_Features__c.field-meta.xml
<CustomField>
    <fullName>Activate_Advanced_Features__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate Advanced Features</label>
    <type>Checkbox</type>
</CustomField>