force-app/main/default/objects/Settings__c/fields/API_Url__c.field-meta.xml
<CustomField>
    <fullName>API_Url__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>(deprecate) API Url</label>
    <type>Url</type>
</CustomField>