force-app/main/default/objects/Settings__c/fields/Campaign_Member_Action_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Action_Job_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Member Action Job Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>