force-app/main/default/objects/Settings__c/fields/Campaign_Member_Action_Job_Row_Limit__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Action_Job_Row_Limit__c</fullName>
    <label>(deprecate) Campaign Member Action Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>