force-app/main/default/objects/Settings__c/fields/Contact_Email_Opt_in_Opt_out_Field__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Opt_in_Opt_out_Field__c</fullName>
    <label>Contact Email Opt-in/Opt-out Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>