force-app/main/default/objects/Settings__c/fields/Contact_Email_Search_Field__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Search_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Email Search Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>