force-app/main/default/objects/Settings__c/fields/Contact_Mobile_Search_Field__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mobile_Search_Field__c</fullName>
    <label>Contact Mobile Search Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>