force-app/main/default/objects/Settings__c/fields/Email_unsubscribe_lead_field__c.field-meta.xml
<CustomField>
    <fullName>Email_unsubscribe_lead_field__c</fullName>
    <label>Email unsubscribe lead field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>