force-app/main/default/objects/Settings__c/fields/Landing_Sync_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Landing_Sync_Job_Id__c</fullName>
    <description>Will keep the last Landing Sync Job Id</description>
    <label>Landing Sync Job Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>