force-app/main/default/objects/Settings__c/fields/Landing_Sync_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Landing_Sync_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Landing Sync Scheduled</label>
    <type>Checkbox</type>
</CustomField>