force-app/main/default/objects/Settings__c/fields/Lead_Email_Opt_in_Opt_out__c.field-meta.xml
<CustomField>
    <fullName>Lead_Email_Opt_in_Opt_out__c</fullName>
    <label>Lead Email Opt-in/Opt-out</label>
    <length>200</length>
    <type>Text</type>
</CustomField>