force-app/main/default/objects/Settings__c/fields/Lead_Email_Opt_in_Opt_out_Field__c.field-meta.xml
<CustomField>
    <fullName>Lead_Email_Opt_in_Opt_out_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Email Opt-in/Opt-out Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>