force-app/main/default/objects/Settings__c/fields/Lead_Email_Search_Field__c.field-meta.xml
<CustomField>
    <fullName>Lead_Email_Search_Field__c</fullName>
    <label>Lead Email Search Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>