force-app/main/default/objects/Settings__c/fields/Lead_Mobile_Search_Field__c.field-meta.xml
<CustomField>
    <fullName>Lead_Mobile_Search_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Mobile Search Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>