force-app/main/default/objects/Settings__c/fields/Mobile_unsubscribe_contact_field__c.field-meta.xml
<CustomField>
    <fullName>Mobile_unsubscribe_contact_field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mobile unsubscribe contact field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>