force-app/main/default/objects/Settings__c/fields/Opt_in_Out_to_Salesforce_Email_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Opt_in_Out_to_Salesforce_Email_Job_Id__c</fullName>
    <label>Opt in Out to Salesforce Email Job Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>