force-app/main/default/objects/Settings__c/fields/Overlay_Help__c.field-meta.xml
<CustomField>
    <fullName>Overlay_Help__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overlay Help</label>
    <type>Checkbox</type>
</CustomField>