force-app/main/default/objects/Settings__c/fields/Person_Account_Email_Opt_In_Out_Field__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Email_Opt_In_Out_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Person Account Email Opt-In/Out Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>