force-app/main/default/objects/Settings__c/fields/Person_Account_Mobile_Opt_In_Out__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Mobile_Opt_In_Out__c</fullName>
    <label>Person Account Mobile Opt-In/Out</label>
    <length>200</length>
    <type>Text</type>
</CustomField>