force-app/main/default/objects/Settings__c/fields/Service_Url2__c.field-meta.xml
<CustomField>
    <fullName>Service_Url2__c</fullName>
    <label>(deprecate) Service Url2</label>
    <type>Url</type>
</CustomField>