force-app/main/default/objects/Settings__c/fields/Service_Url__c.field-meta.xml
<CustomField>
    <fullName>Service_Url__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>(deprecate) Service Url</label>
    <type>Url</type>
</CustomField>