force-app/main/default/objects/Settings__c/fields/Sync_Members_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Sync_Members_Batch_Size__c</fullName>
    <label>Block Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>