force-app/main/default/objects/Settings__c/fields/Toggle_Email_Opt_in_Opt_out__c.field-meta.xml
<CustomField>
    <fullName>Toggle_Email_Opt_in_Opt_out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Code run for Subscribe or Unsubscribe code on behalf of this condition.</description>
    <label>Toggle Email Opt-in/Opt-out</label>
    <type>Checkbox</type>
</CustomField>