force-app/main/default/objects/Settings__c/fields/Toggle_inwise_Opt_in_Opt_out_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Toggle_inwise_Opt_in_Opt_out_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>(depr)Toggle inwise Opt-in/Opt-outMobile</label>
    <type>Checkbox</type>
</CustomField>